--- a/style.css
+++ b/style.css
@@ -3,3 +3,35 @@ body {
   height: 100%;
   margin: 0;
 }
+h1 {
+  text-align: center;
+}
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+nav {
+  text-align: center;
+}
+a {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: beige;
+}
+figcaption {
+  font-size: 12px;
+  text-align: center;
+}
+#featured-property p {
+text-align: center;
+width: 800px;
+margin-left: auto;
+margin-right: auto;
+}
+#details div {
+  float: left;
+  background-color: whitesmoke;
+  text-align: center;
+  width: 25%;
+}
